# ali-multimodel-collection-user-guide

./: .gitignore  README.md  参与方式.md  用户操作步骤.md  甲方要求说明.md
qa_skill/: README.md  SKILL.md  faq.md
上传前预检/: README.md  SKILL.md
上传前预检/scripts/: presubmit_check.py
参考/: Taxonomy标签.md
甲方数据包参考样例/: README.md
甲方数据包参考样例/20260617_gateway-raw-http/: README.md  instruction.md  manifest.json  meta.json  task.toml
甲方数据包参考样例/20260617_gateway-raw-http/environment/workspace/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  TASK.md  config.example.yaml  pyproject.toml
甲方数据包参考样例/20260617_gateway-raw-http/environment/workspace/examples/: config.demo.yaml  mock_upstream.py  query_examples.sh  run_local.sh
甲方数据包参考样例/20260617_gateway-raw-http/environment/workspace/gateway/: __init__.py  __main__.py  app.py  cli.py  config.py  models.py  proxy.py  raw_http_log.py  routing.py  session.py  testing.py  upstream.py  writer.py
甲方数据包参考样例/20260617_gateway-raw-http/environment/workspace/scripts/: raw_to_sharegpt.py
甲方数据包参考样例/20260617_gateway-raw-http/environment/workspace/tests/: conftest.py  test_config.py  test_e2e.py  test_mock_scenarios.py  test_proxy_anthropic.py  test_proxy_openai.py  test_routing.py  test_writer.py
甲方数据包参考样例/20260617_gateway-raw-http/environment/workspace/tests/acceptance/: test_raw_http_trace.py
甲方数据包参考样例/20260617_gateway-raw-http/environment/workspace/tests/fixtures/: raw_http_demo-sess-001.jsonl
甲方数据包参考样例/multi-sessions/: README.md  manifest.json
甲方数据包参考样例/模板/: meta.最小必填.json  task_rubric.样例.yaml  task_rubric.空白模板.yaml
(+33 files in other folders)
